--- a/index.html
+++ b/index.html
@@ -350,9 +350,11 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>My name is Shubham Sharma and I am currently a final year student pursuing Dual-Degree(B.Tech-M.Tech) in Computer Science and Engineering at Indian Institute of Technology, Kanpur, India. My research is primarily on Propositional Sampling and Counting, Knowledge Compilation, AI and Cyber Security. During my curriculum I have done various projects and courses on these topics and I am fascinated by their research prospects. Currently I am working with <a href="https://www.comp.nus.edu.sg/~meel/" target="_blank">Prof. Kuldeep Meel</a> and <a href="https://www.cse.iitk.ac.in/users/subhajit/" target="_blank">Prof. Subhajit Roy</a> on Knowledge Compilation. I was fortunate to get to work with <a href="https://www.cse.iitk.ac.in/users/sandeeps/" target="_blank">Prof. Sandeep Shukla</a> on Blockchains. In the summer of 2017, I interned with Cerebro team at <a href="https://www.nutanix.com/" target="_blank">Nutanix</a> India.</p>
+<p>My name is Dhanraj Tijare .I had completed my B.Tech Degree in Information Technology  at Vishwakarma Institute of Technology, Pune, India. During my curriculum I have done various projects and courses and I am fascinated by their research prospects. Currently I am working as Product Developer at <a href="https://www.aquilaclouds.com" target="_blank">Aquila Clouds</a> .My work is based on Cloud Cost and Usage Optimization of various cloud providers(AWS,Azure,GCP).
+  I had worked on Collection of configuration and performance metrics,Pricing,Billing of these cloud providers using Java,Spring-boot,Hibernate.I had managed the deployment of services on VM's and containers(Docker,Kubernetes).
+  During my curriculum, I interned with Automation team at <a href="https://www.cytel.com/" target="_blank">Cytel</a> Pune,India.</p>
 
-<p>Apart from academics, I like to spend my time doing <a href="https://www.flickr.com/photos/152642804@N08/with/37121312090/" target="_blank">photography</a>, playing games and doing social work for conservation of nature.</p>
+<p>Apart from academics in college, I worked as Database Secretary at Student Council,VIT,Pune. Attended NSS Camp at Village Kanjale,organised by Savitribai Phule University,Pune. I like to play strategy games and expore new technologies.</p>
 
 
     <div class="row">
