--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
     <div class="stream-meta article-metadata">
       <div itemprop="author">
-        <a href="www.google.com" itemprop="url>Digvijay Andhorikar</a>, <strong>Dhanraj Tijare</strong>, Anagha Phirke, and Dipali Nagpure</div>
+        Digvijay Andhorikar, <strong>Dhanraj Tijare</strong>, Anagha Phirke, and Dipali Nagpure</div>
     </div>
 
     <div class="talk-links">
